@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/usr/bin/env bash
 
 DESTDIR="${DESTDIR:-/}"
 pkglibdir="${pkglibdir:-/usr/lib/rpm}"
