@@ -15,7 +15,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.51
+Release: 0.52
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -459,7 +459,10 @@ exit 0
 %{__prefix}/include/popt.h
 
 %changelog
-* Sun Jan  5 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.1
+* Mon Jan  6 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.52
+- portabilitly: solaris fixes.
+
+* Sun Jan  5 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.51
 - file: avoid ogg/vorbis file classification problems.
 
 * Wed Jan  1 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.49
